--- a/web/src/styles/components/ContactSection.module.css
+++ b/web/src/styles/components/ContactSection.module.css
@@ -87,12 +87,14 @@
 /* Tablet */
 @media (min-width: 320px) and (max-width: 720px) {
   .container {
-    width: 100%;
+    width: 100vw;
+    background-color: #fff;
 
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 2.4rem 0;
+    padding: 4rem 0;
   }
   .content {
     max-width: 1000px;
@@ -101,38 +103,60 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    background-color: #566dea;
+    justify-content: space-between;
+    gap: 4rem;
 
     padding: 2.4rem;
 
     border-radius: 0.8rem;
   }
-  .content > h2 {
+  .aboutContact{
+    display: flex;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+  }
+  .aboutContact > h2 {
     margin: 0 0 1.4rem 0;
-    font-size: xx-large;
-    color: #fff;
+    font-size: 4rem;
+    color: #212529;
     text-align: center;
   }
-  .content > p {
-    margin: 0 0 1.4rem 0;
+  .aboutContact > p {
     font-size: small;
-    color: #fff;
-    text-align: center;
+    color: #212529;
+
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+    margin-bottom: 0.8rem;
   }
   
   .form{
     max-width: 480px;
     width: 100%;
+    border-radius: 0.8rem;
+    padding: 4rem 2.4rem;
+    background-color: #eceaea;
+  }
+
+  .formTitle{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1.4rem;
+    margin-bottom: 2.4rem;
   }
 
   .form label {
-    color: #fff !important;
+    font-size: small !important;
+    color: #0A4378 !important;
     text-align: center !important;
   }
   .form button{
-    background-color: #fff !important;
-    color: #566dea !important;
+    background-color: #0A4378 !important;
+    color: #fff !important;
   }
 
   .errorMessage{
@@ -152,12 +176,14 @@
 /* Celular */
 @media (max-width: 320px) {
   .container {
-    width: 100%;
+    width: 100vw;
+    background-color: #fff;
 
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 2.4rem 0;
+    padding: 4rem 0;
   }
   .content {
     max-width: 1000px;
@@ -166,38 +192,60 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    background-color: #566dea;
+    justify-content: space-between;
+    gap: 4rem;
 
     padding: 2.4rem;
 
     border-radius: 0.8rem;
   }
-  .content > h2 {
+  .aboutContact{
+    display: flex;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+  }
+  .aboutContact > h2 {
     margin: 0 0 1.4rem 0;
-    font-size: xx-large;
-    color: #fff;
+    font-size: 4rem;
+    color: #212529;
     text-align: center;
   }
-  .content > p {
-    margin: 0 0 1.4rem 0;
+  .aboutContact > p {
     font-size: small;
-    color: #fff;
-    text-align: center;
+    color: #212529;
+
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+    margin-bottom: 0.8rem;
   }
   
   .form{
     max-width: 480px;
     width: 100%;
+    border-radius: 0.8rem;
+    padding: 4rem 2.4rem;
+    background-color: #eceaea;
+  }
+
+  .formTitle{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1.4rem;
+    margin-bottom: 2.4rem;
   }
 
   .form label {
-    color: #fff !important;
+    font-size: small !important;
+    color: #0A4378 !important;
     text-align: center !important;
   }
   .form button{
-    background-color: #fff !important;
-    color: #566dea !important;
+    background-color: #0A4378 !important;
+    color: #fff !important;
   }
 
   .errorMessage{
