--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -7,72 +7,72 @@
 ::-webkit-scrollbar {
   width: 5px;
   height: 5px;
- }
- ::-webkit-scrollbar-thumb {
+}
+
+::-webkit-scrollbar-thumb {
   background: #cfcfcf;
   border-radius: 5px;
- }
- ::-webkit-scrollbar-thumb:hover{
+}
+
+::-webkit-scrollbar-thumb:hover {
   background: #999999;
- }
- ::-webkit-scrollbar-track{
+}
+
+::-webkit-scrollbar-track {
   background: #ffffff;
   border-radius: 5px;
   box-shadow: inset 7px 10px 12px #f0f0f0;
- }
+}
 
-p.firebase-emulator-warning{
+p.firebase-emulator-warning {
   opacity: 0.5;
 }
 
-html {
-  font-size: 62.5%
-}
-
 body {
-  font-size: 1.6rem
+  width: 100vw;
+  height: 100vh;
 }
 
-body, input, textarea, button{
-  font: 400 1.6rem "Poppins", sans-serif;  
-}
-
- button{
+button {
   cursor: pointer;
 }
 
-a{
+a {
   color: inherit;
   text-decoration: none;
 }
 
-#root{
+#root {
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
 }
 
 /* PC */
 @media (min-width: 720px) {
-  .statusbar{
+  .statusbar {
     display: none;
     margin: 0;
   }
 }
+
 /* Tablet */
 @media (min-width: 320px) and (max-width: 720px) {
-  .statusbar{
-    display: flex;
-    margin: 1.4rem 0 0 0;
-  }
-}
-/* Celular */
-@media (max-width: 320px) {
-  .statusbar{
+  .statusbar {
     display: flex;
     margin: 1.4rem 0 0 0;
   }
 }
 
-.whats-btn{
+/* Celular */
+@media (max-width: 320px) {
+  .statusbar {
+    display: flex;
+    margin: 1.4rem 0 0 0;
+  }
+}
+
+.whats-btn {
   position: fixed;
 
   display: flex;
@@ -86,29 +86,33 @@ a{
   border-radius: 50%;
   border: none;
   background-color: #4FCE5D;
-  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.45);
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.45);
   transition: 0.3s;
   z-index: 60;
 }
 
-.whats-btn:hover{
+.whats-btn:hover {
   background-color: #3c9c48;
 }
-.error{         
+
+.error {
   opacity: 1;
   text-align: center;
   font-weight: 800;
   color: #F00;
   transition: 0.5s;
 }
-.error.hidden{    
+
+.error.hidden {
   opacity: 0;
 }
-.call-to-action.hidden{
+
+.call-to-action.hidden {
   opacity: 0;
 }
-.call-to-action{
-  font-family: "Poppins";    
+
+.call-to-action {
+  font-family: "Poppins";
   opacity: 1;
   position: fixed;
   bottom: 20px;
@@ -123,12 +127,12 @@ a{
   line-height: 1.2;
   background-color: #EEE;
   font-weight: 800;
-  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.45);
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.45);
   transition: 1s;
   z-index: 50;
 }
 
-.whats-form{
+.whats-form {
   opacity: 1;
   position: fixed;
   bottom: 100px;
@@ -137,17 +141,17 @@ a{
   display: flex;
   border-radius: 0.8rem;
   flex-direction: column;
-  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.45);
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.45);
   transition: 1s;
   z-index: 55;
 }
 
-.whats-form.hidden{
+.whats-form.hidden {
   opacity: 0;
   bottom: -1000px;
 }
 
-.whats-form .form-header{
+.whats-form .form-header {
   text-align: center;
   padding: 0.8rem 1.8rem;
   background-color: #4FCE5D;
@@ -155,28 +159,28 @@ a{
   border-radius: 0.8rem 0.8rem 0 0;
 }
 
-.whats-form .form-body{
+.whats-form .form-body {
   padding: 0.8rem 1.8rem;
   background-color: #FFF;
   background-image: url('../assets/whatsBackground.png');
   background-size: cover
 }
 
-.whats-form .form-body .form-input-group{
+.whats-form .form-body .form-input-group {
   display: flex;
-  flex-direction: column;  
+  flex-direction: column;
   margin: 1.4rem 0;
   width: 100%;
 }
 
-.whats-form .form-body .form-input-group .whats-form-label{
+.whats-form .form-body .form-input-group .whats-form-label {
   font-weight: 400;
   font-size: 1.4rem;
   color: #000;
   margin-left: 0.4rem;
 }
 
-.whats-form .form-body .form-input-group .whats-form-input{
+.whats-form .form-body .form-input-group .whats-form-input {
   border-radius: 0.8rem;
   padding: 0.8rem 0.8rem;
   outline: none;
@@ -184,12 +188,12 @@ a{
   transition: 0.3s;
 }
 
-.whats-form .form-body .form-input-group .whats-form-input:focus{    
+.whats-form .form-body .form-input-group .whats-form-input:focus {
   border: 1px solid #4FCE5D;
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75); 
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
-.whats-form .form-body .whats-form-button{
+.whats-form .form-body .whats-form-button {
   width: 100%;
   border-radius: 0.8rem;
   padding: 0.8rem 0.8rem;
@@ -202,16 +206,17 @@ a{
   transition: 0.3s;
 }
 
-.whats-form .form-body .whats-form-button:hover{
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.55);    
+.whats-form .form-body .whats-form-button:hover {
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.55);
   background-color: #59e96a;
 }
-.whats-form .form-body .whats-form-button:active{    
+
+.whats-form .form-body .whats-form-button:active {
   background-color: #3c9e48;
-  box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.75); 
+  box-shadow: inset 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
-.whats-form .form-footer{
+.whats-form .form-footer {
   padding: 0.8rem 1.8rem;
   border-top: 1px solid #ddd;
   background-color: #eee;
