--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,31 +45,7 @@ a {
 #root {
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
-}
-
-/* PC */
-@media (min-width: 720px) {
-  .statusbar {
-    display: none;
-    margin: 0;
-  }
-}
-
-/* Tablet */
-@media (min-width: 320px) and (max-width: 720px) {
-  .statusbar {
-    display: flex;
-    margin: 1.4rem 0 0 0;
-  }
-}
-
-/* Celular */
-@media (max-width: 320px) {
-  .statusbar {
-    display: flex;
-    margin: 1.4rem 0 0 0;
-  }
+  overflow: auto;
 }
 
 .whats-btn {
